change the color

--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #101214;
-    color: #7A7C80;
+    background-color: #e1f2ef;
+    color: #292857;
 
 }
 
-h2,.white{
-    color: #fff;
+h2,.green{
+    color: #114345;
 }
 
 a{
@@ -25,7 +25,7 @@ a{
 }
 /* section 1 */
 .section-1{
-    padding-top: 40vh;
+    padding-top: 20vh;
     text-align: center;
 }
 
@@ -42,7 +42,7 @@ a{
 
 .section-1 a{
     font-size: 1.5rem;
-    padding: 10px;
+    padding: 6px;
 }
 /* section 2 */
 .section-2{
@@ -98,7 +98,7 @@ a{
     }
     .section-2{
         padding: 0;
-        padding-left: 1.5rem;
+        padding-left: 1rem;
         padding-top: 2rem;
     }
 }
