--- a/style.css
+++ b/style.css
@@ -60,8 +60,13 @@ a{
     padding-bottom: 10px;
     margin:0;
 }
+.section-2 k{
+    font-size: 1.1rem;
+    padding-bottom: 10px;
+    margin:0;
+}
 
-.section-2 a{
+.section-2 g{
     display: block;
     padding: 5px;
     font-size: 1.2rem;
@@ -69,8 +74,14 @@ a{
     width: 100px;
 }
 /* animations / utilities */
-.section-2 a:hover{
+.section-2 g:hover{
     font-size: 1.3rem;
+    color: #fff;
+    cursor: pointer;
+    transition: 0.2s;
+}
+.section-2 k:hover{
+    font-size: 1.1rem;
     color: #fff;
     cursor: pointer;
     transition: 0.2s;
