--- a/style.css
+++ b/style.css
@@ -48,6 +48,13 @@ a{
     font-size: 1.5rem;
     padding: 6px;
 }
+.section-1 a:hover{
+    color: #fff;
+    cursor: pointer;
+    transition: 0.2s;
+    background-color: #1CD1A0;
+}
+
 /* section 2 */
 .section-2{
     padding-top: 10vh;
@@ -66,18 +73,31 @@ a{
     margin:0;
 }
 .section-2 k{
-    font-size: 1.1rem;
-    padding-bottom: 10px;
-    margin:0;
-}
-
-.section-2 g{
     display: block;
     padding: 5px;
     font-size: 1.2rem;
     padding-left: 0;
-    width: 100px;
+    width: 800px;
+    cursor: pointer;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
 }
+
+.section-2  g{
+    display: block;
+    padding: 5px;
+    font-size: 1.2rem;
+    padding-left: 0;
+    width: 800px;
+    cursor: pointer;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+}
+
 /* animations / utilities */
 .section-2 g:hover{
     font-size: 1.3rem;
@@ -86,22 +106,17 @@ a{
     transition: 0.2s;
 }
 .section-2 k:hover{
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     color: #fff;
     cursor: pointer;
     transition: 0.2s;
 }
 
-.section-1 a:hover{
-    color: #fff;
-    cursor: pointer;
-    transition: 0.3s;
-}
 
-.white:hover{
+/*.white:hover{
     position: relative;
     padding-left: 10px;
-}
+}*/
 
 /* media queres */
 @media(max-width:780px){
@@ -117,4 +132,40 @@ a{
         padding-left: 1rem;
         padding-top: 2rem;
     }
+    .section-2{
+        padding: 0;
+        padding-left: 1rem;
+        padding-top: 2rem;
+    }
+}
+
+/* Style the button that is used to open and close the collapsible content */
+.collapsible {
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+}
+
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+  background-color: #1CD1A0;
+  padding: 5px;
+  width: 100%;
+  font-size: 1.3rem;
+  color: #fff;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content {
+  padding: 5px;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+  display: none;
+  overflow: hidden;
+  color: #51576F;
+  width :100%;
 }
