--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@ a{
 }
 /* section 1 */
 .section-1{
-    padding-top: 20vh;
-    padding-left: 18vh;
-    text-align: center;
+    padding-top: 10vh;
+    padding-left: 16vh;
+    text-align: left;
     height: 140px; 
     width: 300px;
     position: fixed;
@@ -44,6 +44,12 @@ a{
     margin-bottom: 10px;
 }
 
+.section-1 h3{
+    font-size: 1.5rem;
+    padding-top: 4vh;
+
+}
+
 .section-1 a{
     font-size: 1.5rem;
     padding: 6px;
@@ -55,11 +61,12 @@ a{
     background-color: #1CD1A0;
 }
 
+
 /* section 2 */
 .section-2{
     padding-top: 10vh;
-    padding-left: 70vh;
-    width: 100%;
+    padding-left: 60vh;
+    width: 110%;
 }
 
 .section-2 h2{
@@ -72,17 +79,13 @@ a{
     padding-bottom: 10px;
     margin:0;
 }
-.section-2 k{
-    display: block;
-    padding: 5px;
-    font-size: 1.2rem;
-    padding-left: 0;
-    width: 800px;
+.section-2 a{
+    font-size: 1.1rem;
+    padding-bottom: 10px;
+    margin:0;
     cursor: pointer;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
+    text-decoration: underline dotted;
+    color: hotpink;
 }
 
 .section-2  g{
@@ -139,6 +142,39 @@ a{
     }
 }
 
+/* section 3 */
+.section-3{
+    padding-top: 2vh;
+    padding-left: 0vh;
+    text-align: left;
+    height: 140px; 
+    width: 300px;
+    position: fixed;
+}
+
+.section-3 p{
+    font-size: 1.1rem;
+    padding-bottom: 10px;
+    margin:0;
+}
+
+.section-3 h2{
+    font-size: 1.4rem;
+    margin-bottom: 10px;
+}
+
+.section-3 a{
+    font-size: 1.1rem;
+    padding: 6px;
+}
+.section-3 a:hover{
+    color: #fff;
+    cursor: pointer;
+    transition: 0.2s;
+    background-color: #1CD1A0;
+}
+
+
 /* Style the button that is used to open and close the collapsible content */
 .collapsible {
   cursor: pointer;
@@ -147,6 +183,8 @@ a{
   border: none;
   text-align: left;
   outline: none;
+  background-color: #1CD1A0;
+  color: #fff;
 }
 
 
@@ -164,7 +202,7 @@ a{
   padding: 5px;
   padding-top: 1rem;
   padding-bottom: 2rem;
-  display: none;
+  display: block;
   overflow: hidden;
   color: #51576F;
   width :100%;
