--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 .grid-2{
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: 100px 800px;;
 }
 
 body{
@@ -28,9 +28,10 @@ a{
     padding-top: 10vh;
     padding-left: 16vh;
     text-align: left;
-    height: 140px; 
-    width: 300px;
-    position: fixed;
+    width: 200px;
+    position: sticky;
+
+
 }
 
 .section-1 p{
@@ -61,12 +62,19 @@ a{
     background-color: #1CD1A0;
 }
 
+.section-1 a:active {
+  color: #1CD1A0;
+}
+
 
 /* section 2 */
 .section-2{
     padding-top: 10vh;
-    padding-left: 60vh;
+    padding-left: 300px;
     width: 110%;
+    overflow: scroll;
+    height: 800px
+/*    max-width: 110%;*/
 }
 
 .section-2 h2{
@@ -108,39 +116,11 @@ a{
     cursor: pointer;
     transition: 0.2s;
 }
-.section-2 k:hover{
-    font-size: 1.2rem;
-    color: #fff;
-    cursor: pointer;
-    transition: 0.2s;
-}
-
 
 /*.white:hover{
     position: relative;
     padding-left: 10px;
 }*/
-
-/* media queres */
-@media(max-width:780px){
-    .grid-2{
-        grid-template-columns: 1fr;
-    }
-    .section-1{
-        padding:0;
-        padding-top: 5rem;
-    }
-    .section-2{
-        padding: 0;
-        padding-left: 1rem;
-        padding-top: 2rem;
-    }
-    .section-2{
-        padding: 0;
-        padding-left: 1rem;
-        padding-top: 2rem;
-    }
-}
 
 /* section 3 */
 .section-3{
@@ -148,8 +128,8 @@ a{
     padding-left: 0vh;
     text-align: left;
     height: 140px; 
-    width: 300px;
-    position: fixed;
+    width: 200px;
+    position: sticky;
 }
 
 .section-3 p{
@@ -172,6 +152,9 @@ a{
     cursor: pointer;
     transition: 0.2s;
     background-color: #1CD1A0;
+}
+.section-3 a:active {
+  color: #1CD1A0;
 }
 
 
