--- a/style.css
+++ b/style.css
@@ -71,9 +71,10 @@ a{
 .section-2{
     padding-top: 10vh;
     padding-left: 300px;
-    width: 110%;
-    overflow: scroll;
-    height: 800px
+    width: 115%;
+    height: 800px;
+    overflow-x: hidden;
+    overflow-y: scroll;
 /*    max-width: 110%;*/
 }
 
@@ -173,7 +174,6 @@ a{
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active, .collapsible:hover {
-  background-color: #1CD1A0;
   padding: 5px;
   width: 100%;
   font-size: 1.3rem;
