--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,31 @@
 /* global */
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
+html{
+    width:100%;
+    height:100%;
+}
+body{
+    width:100%;
+    height:100%;
+    font-family: 'Roboto', sans-serif;
+    background-color:#e1f2ef;
+    color: #292857;
+}
+
 .grid-2{
     display: grid;
     grid-template-columns: 100px 800px;;
 }
 
-body{
+/* body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
     background-color: #e1f2ef;
     color: #292857;
 
-}
+} */
 
 h2,.green{
     color: #114345;
@@ -28,7 +40,7 @@ a{
     padding-top: 10vh;
     padding-left: 16vh;
     text-align: left;
-    width: 200px;
+    width: 200%;
     position: sticky;
 
 
@@ -72,7 +84,7 @@ a{
     padding-top: 10vh;
     padding-left: 300px;
     width: 115%;
-    height: 800px;
+    height: 30%;
     overflow-x: hidden;
     overflow-y: scroll;
 /*    max-width: 110%;*/
