--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,19 @@
 /* global */
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-html{
-    width:100%;
-    height:100%;
-}
-body{
-    width:100%;
-    height:100%;
-    font-family: 'Roboto', sans-serif;
-    background-color:#e1f2ef;
-    color: #292857;
-}
-
-.grid-2{
+.container{
     display: grid;
-    grid-template-columns: 100px 800px;;
+    grid-template-columns: 15% 85%;;
 }
 
-/* body{
+body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
     background-color: #e1f2ef;
     color: #292857;
 
-} */
+}
 
 h2,.green{
     color: #114345;
@@ -37,10 +25,11 @@ a{
 }
 /* section 1 */
 .section-1{
-    padding-top: 10vh;
+    padding-top: 8vh;
+    padding-bottom: 10vh;
     padding-left: 16vh;
     text-align: left;
-    width: 200%;
+    width: 100%; 
     position: sticky;
 
 
@@ -82,12 +71,11 @@ a{
 /* section 2 */
 .section-2{
     padding-top: 10vh;
-    padding-left: 300px;
-    width: 115%;
-    height: 30%;
+    padding-left: 20vh;
+    height: 50%;
     overflow-x: hidden;
     overflow-y: scroll;
-/*    max-width: 110%;*/
+    max-width: 80%;
 }
 
 .section-2 h2{
@@ -113,7 +101,7 @@ a{
     display: block;
     padding: 5px;
     font-size: 1.2rem;
-    padding-left: 0;
+    padding-left: 150%;
     width: 800px;
     cursor: pointer;
     width: 100%;
@@ -201,4 +189,11 @@ a{
   overflow: hidden;
   color: #51576F;
   width :100%;
+}
+
+@media screen and (max-width: 768px) {
+    /* On screens narrower than 768px (e.g., iPhone), stack sections vertically */
+    .container {
+        grid-template-columns: 1fr; /* Stacked on top of each other on mobile */
+    }
 }
