--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ a{
 
 /* section 2 */
 .section-2{
+    color: #fff;
     padding-top: 10vh;
     padding-left: 20vh;
     height: 50%;
@@ -84,6 +85,7 @@ a{
 }
 
 .section-2 p{
+    color: #7A7C80;
     font-size: 1.1rem;
     padding-bottom: 10px;
     margin:0;
@@ -99,15 +101,13 @@ a{
 
 .section-2  g{
     display: block;
+    color: #fff;
     padding: 5px;
     font-size: 1.2rem;
-    padding-left: 150%;
-    width: 800px;
-    cursor: pointer;
+    /* padding-left: 150%; */
     width: 100%;
-    border: none;
+    cursor: pointer;
     text-align: left;
-    outline: none;
 }
 
 /* animations / utilities */
@@ -115,7 +115,6 @@ a{
     font-size: 1.3rem;
     color: #fff;
     cursor: pointer;
-    transition: 0.2s;
 }
 
 /*.white:hover{
